@@ -6,23 +6,23 @@ DIST FlightGear-data-3.2.0.tar.bz2 1264837989 SHA256 bd48708931335698303ad573914
 DIST FlightGear-data-3.4.0.tar.bz2 1145893777 SHA256 8cefa7c323d974d8e51fd23c97ae79dc731e65b81e1729cb1bc9bc1f99df128b SHA512 791ff1b1f7f759ccc73f738ba6cb6fd050d1341ae031a872745b4c1145cdb92de62193df7ea6e9fe05a1c95a60fa664da56015d643244d38c7b0b72a2c3146d9 WHIRLPOOL 0abaa4da7e9032469da80500fc23c84d6b696fc596529853a3a614bb3627ef6081c12ea78e6e8c987e6b11b303cca0d8da5c9628164d2a93bed452230302a655
 EBUILD flightgear-data-3.0.0.ebuild 696 SHA256 049099f3c64a6bbe4710aa2ae0698fd7503a7c47ba512354acffe0fec6eb6191 SHA512 21f287c55af5a584495657a1bc842fd43a1847059bbaf85394c9ab9988b71e0b65e6f85fd7821155eb13505f45fad48254894320cf407c49cbaf385eaa68ac32 WHIRLPOOL 89b5149119d8072f4154ab4894e540df5fee200b3099a0e41fa24c2e7524230fda2229b0d53b4ae10c393a5ac69a092e177f34bf334519aaeaedaa1140398d6b
 EBUILD flightgear-data-3.2.0.ebuild 696 SHA256 b2f71edc7234dd928b5f3fd276619238ed15799b68544b8c8bccc8f6e1a16c93 SHA512 bcc3e9172519333191b47a45018f3670071f8b2a18328260f955bd1509575938cf98d1f1f89661f089e260f0cdae0046327f88d79e3ce4a2d3c396e2f40f4114 WHIRLPOOL 4001874a9f86854db141540cdd0fcf9c3581b510642170681db94d5b38b6000585eb2051b0f7ff0a9895dfb0a247d8e25f518f91082c0cc5ae8f3a56b1043f2d
-EBUILD flightgear-data-3.4.0.ebuild 703 SHA256 55b54f2d5d8b85cc8299dcd5b58723916ebfd42da190bc75e20cc709735fa3ab SHA512 2ee2acfcc895b6c5490ba51b9eae02fbad755488943d63e1eb80b0d58102966fa6977f73323a209f9dd98ac89713bc16fb9dc05dc891e95acb7b108385d06d7e WHIRLPOOL 872a67a0cc013c1be0b6d86157b21fa623cfb547398390703680e6ac6a810aaa2c0a3517feb9b3117b652414dce71f563f2cb23d803772dd3741831363a900e9
-MISC ChangeLog 2032 SHA256 9269c6245df5f2732b0c92e8e04159f3f0fa90bf822dbca5c4f875127934f7a0 SHA512 38b64745cb2c1d0f6c6ee1f2188575eac18851e58097c389d8c3ff72ee1a808d55baf0622206e03358cf6368f13990c192149ad42d025c7a1d092e09dca00003 WHIRLPOOL b48e8e0df695c6d7b6e7768c2067de64f229500c5e5f234d64b92e6f5ee17d1be2ce843e674bee59b395e453edb0e0bad3c9589ab273d140c9676c629145cb27
+EBUILD flightgear-data-3.4.0.ebuild 697 SHA256 031dafee2400bfe251104b09da8e2fc4e178e405a6b8ae65a2072615d40b2c9c SHA512 4eba3d3b5a1f4cc7f5ec1cc2c6d0ff77fdf80bc4a2e771ee437e7cddc6edb80741d6dfa6dc0eadab3766256f0ad63ac24262be0824df7816dbcae76f82404971 WHIRLPOOL cf99a79c0418c3b78877d1fe96ab3dc4e6f05a3940468b59648e395f2a621bb0590fae27f29574b8e9cba770504950434a8d5e023820343ffb9a682da1907477
+MISC ChangeLog 2148 SHA256 265a15574b13298b210500a686770dd21db964cceacc58862b8525526149e45a SHA512 ab8d177934dd6cd06d8c2e4472ca0d3912ba4439ef09afda41aaefdb5a1ecf974b881f5a0c6085be3d33d701bb0dfe633e94814fc9a428534e1b9275d321c28b WHIRLPOOL 13dc854d95a81d15a6ce5bb8da50ad07fd89475f3466c6c5480f164eae318451fe2bf8f2dfc5e80c09d23d51745076bb43eedd928fa6da2ceaf1f9de8912a052
 MISC metadata.xml 252 SHA256 2dc38e2edb5ef0ce76845cfb7ab60e702c61eaff8e5ae142025b1793ed81084c SHA512 e2066947e3e2bd14b22fc53e21b62a03cb07522cdb4869649bd6aa9166af8c83b9635255d20a1fdd7a7fc50c9d9f64f8298249f5c698f753e996c24958f48e52 WHIRLPOOL b8ded12a25e375d3ba15c1d550df9dfc49b8320d8d89211980c144192a54786318842a6ab653fd5e56a7b58d181c4a24b4461901630f7b007b4df225ee120869
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVFTHTAAoJELp701BxlEWfckoP/jpXURIJjs1oWBW4EpTTAK+B
-H6Yt2fhe3s+McommWPRsgpt1AWVy4ylWWcnNv0gshbIhv8xBfjWb0sP/Lwh+Ndzb
-Mglxo5muZw4f2SkFdEWqdNahn2fx150oKIN5n08a+e7ssyy4wGUA4jjszJubF/wq
-i4B2dEAefSfG1dETGd4/ZbImZOYaMtd8wtYjJ2FcJmSae7ZF0roY3OfvNl02+z+l
-8Bi6xsy07oUaCRsRhfQZsa1X5U2XQjAofwxS0mjLxLgLgRvFegLYj0EKbjVVzDii
-oxXf1qp1/VTCeeAOPUuFJa7OBnKL/MAEviKhFzNeTenBuncaNUq3cK6DeLxYInQf
-OUA1S4MtgBHgZlUkJvRENOs71jQ4aBj+7zrvQpnVUOWTkUcDyEvqwwpF/zdEolBj
-WutZe0z1KRb7fMK6h/QFa4kTwkOcb8DJAow3SZyS5yL/aQ/bOb95VpTsxvK/NnTG
-d2LmlIPbuyUONWDrmjP26VtbNVsH5IxKy9BTvysHluHRBug+6aYePsDelFycoLTO
-RglAsf0LJuojVb54Gzmqizy+iRCzZKzVz+wS/hxykH3acIxcT+MvGjCoVq7zDdWW
-Dl8aJqsCMxtyhBzGC+gDVRmzkMC7Ze0BD2k9ykkQJmmMaii1uScEqp3nPsZGn5AT
-cPjZJHK/8ShvMuEudgvj
-=gigH
+iQIcBAEBCAAGBQJVJUajAAoJELp701BxlEWfi0IP/isu1ju2InJSktw0VRs32OWl
+50oyxC0d9Jit/cvuldAjKb6WWCh+/Bw1CqE7L+2aEdRthxlEkm4zWjleVBRsaZ7p
+7IPzjEd7jrg3QAIr8Ab20pegKVnxIQLQQc3Z4ayNDWtmtOUpwbPMo0IbdBkAuGUB
+st4+HBYFeY0x6+XAExEe3dpfAq4UcxTA8iV/5ZKi7OTZ1ICjJVG8+R3XNbgMbt5l
+pewjAEMGjYjxI0Rm46Jx3vj1Fr77wuV8iZ9CaVeS7lQCm+VG4qpmsfkgxlj+8Ryq
+5TvqjXxyJzAEQkjR5esfi+JlWiKNiIba9BV6KuM8PXolH0q72xfn9yHhcuuQvydR
+uokpfL5m3A/ft0ImcqtFhZZMyYPXhoPxNxvvUmG2YTgzvOmdqCTxkny5be7VmDPQ
+MSPgq8vyzSuvz+lV3gA8jicBc4W1uRGaEYULMUsjvswJESYCKGFQBuRMa4ivZq5j
+Sd1/RtXhsRU0H+rVVdRwYzUoKZqwxTO1VCY+Jo84YFDGaQfQ/B2jwy+flgkykaCI
+9mv2a53AAK3DGgOUgrVCGO0cufCb8eIpeCwn9tuU1F+1Yg2t4AGtzQFgTQEz8SbB
+r47ANTK/A3rPt1VreHfdUfJh/jDyoiW0OFBjSMwKUS6vL8Vk0t0/acuIidPXc6QH
+tKqp3iun/lKcMxztP8pn
+=HDbH
 -----END PGP SIGNATURE-----
