@@ -9,23 +9,23 @@ DIST flightgear-3.4.0.tar.bz2 7522457 SHA256 b5645d05b50728a89f091292bc557f440d8
 EBUILD flightgear-3.0.0-r1.ebuild 3416 SHA256 77228d119aeeadfa2ad0990f6b2b86a2b1c250a440944053ca302827e1762ec3 SHA512 a78f85f7e610892fe3d83949965fb94ed4df9d5662175ce26d568162aaeea8c548394bf95f9c701087c8fea35264bcb5819edd1c78d899d176ad99860c7e9b76 WHIRLPOOL 787b57b813ada4ff1a569d67f1e4c1e395b3285a67545d3839af2d5f72b98dad1e8f8b9716cc5c79216893c3335fc11135002ed2fb755d663eb152b0d952ef5b
 EBUILD flightgear-3.0.0.ebuild 2500 SHA256 717f90c9a47dd7d9dfaeb2d914b3a0899fcbef341189eb471f538bcfbcc8ddde SHA512 180845fe2b9e120b78e447c09e49bf159882cf09e8d3163fb26e5f11ef588b30c082d54f038f4f4d20471f57b23fb5f85d999412af6ed883f4abf64d7d5c9924 WHIRLPOOL 6325ac991a09429597a96901c7234241141471b7634594cd93b70d24cb46e70976d0934b60394236d112b8c7cfd5e26715d7fcdc58b2b9163981421b41b92e85
 EBUILD flightgear-3.2.0.ebuild 3369 SHA256 4c0db00464def0a27f81fcc07629c51149feee9d8aeb9403967f9aa9d79b014d SHA512 9d60b7d5bb13769cdece28167196b49b252ab97ba7baa41b131edab861c58deb52743bcc44712ca20737879df1823a310971ab153958d2023f2aaa2381fec908 WHIRLPOOL 36eab842c38695a1a7b34a1805b40da3cbcca1c060e0ac89a14062f86225a6b0f48c44465defa76893b8d052c8d127ea2a8496ae140abc125299bd36704ca3b9
-EBUILD flightgear-3.4.0.ebuild 3612 SHA256 24223ee6036759219779dc88f56ca7096cb11de2fcdf9c58caa64873a9f36912 SHA512 913ffe25175d515be5832a303b768f42cb89de6d8fa3f210452a8e37391a4503ceb5af2f62f0b74003aca99248aea43ee19c2855be67cb79546e1ebbbf494dbb WHIRLPOOL f43aeef6895223bce451991cd1b496bd2c676dbe48b4f68a65c0301465ffd3762e681a2d1db4093041aac3b40e1b16f4eebe60e54474cb26ed6f857ea9a13b58
-MISC ChangeLog 13249 SHA256 daeb603a6c19288d0f496e028aa040212210e4dec9aad7f46261deb0d734ab1c SHA512 1acd9177005edc33fddf869d80e22e63025da554f9d75ace9a9462c8971d2ae3ae2f3b0a527b443709817611027651b5416179a5cb3a2b778ce4ef8644abff5b WHIRLPOOL f6bf6e54eb858c53a9d86dc047e47f9ba018832b404a2b21dea96fcca93314726fc7ff2e5333346a9ce1f0d681a2173a2fc980f79870c8bd57f696cdb1db53fb
+EBUILD flightgear-3.4.0.ebuild 3606 SHA256 00233f18a6b466ffb761a1b918afeb7b5a467206e919b469d12d73f2948039b0 SHA512 ec54c5a9c01af6ea47d7ee53f81d717691a0c7fb34f5cddb02d16a482ca2f27d737fcd024cdd479436ee12b36a9804cbca4eb7ada4d46353a8097fde71eabebe WHIRLPOOL a78d3c4e7f18158b728db675a7652728d2792e176ba541bfbc909ac1df7d2fbe1da7459b80478561dd3fb0c4cefff836652009154ba3c3b45e16205760738fd5
+MISC ChangeLog 13360 SHA256 dfb91a849c7df6462fbdf754ee553249e4265989fdb46d70afdc46d5d28625a8 SHA512 f08e01f2719d278313472161cb1a1ebb3bfe2cfc7266d7c003ab1ec5e0fc0441d994d20ad5da6a1c34eef723e12ff31a75e505d8aa1d825f705e34d36c01ee54 WHIRLPOOL 39bb537f4875829e91ce7d78cf0aad2673cb7c5760220d66fe7151f108b0558b512b91de92e4f0547251e8543e715a845ce538f6c5f2a7770d65121b22ca6939
 MISC metadata.xml 796 SHA256 8f00f19484a0621bd9f5dc190e6d881ab6d5392b4d7a678693a32058db34950c SHA512 43f5ee767c67a938a0962ffde52d9afa96dab87870df21ab5bea1c38f6eda2538dd209dd14eb88961a5c2a7adf91d891567fa6e3ff8971e6e73c855f77e0c693 WHIRLPOOL 5612e92ae24749b68b3de3b200fddd9959540b8ed65c65e285d69701f0bb875d3f597350fbcd5cd16af3ae694528341fecb969940272914535da7a38e2d0f977
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVFTHXAAoJELp701BxlEWfADwQAKvFks6/TEp+dSNUsSG/TEjl
-Fm/+VJRHraZWRtx1xUEBSeHJJa2DPFuSIgHdsmPLse8Vv6yRvPe3SoKXRa4wldIM
-uosjmSg0LRzdsVTdCOYOtYrJvTQiwMUvuaJMq6DL3YRNI6yfsyU2RYxbYnUOnQCk
-4AgWkkI5evVfvuurlAa63qEgYkWFRzW3qlyTPn3j45Q3Xx5rJTecvklTC0f7/5qq
-u7JQEhYxRPvKyEtMZ/ub4gCOavnNDXfEbyh9emKKHELOJ783lXYF5o0yPR8xEVDB
-j6X7R4X6s2+Js+B3z7DHMPMs1pwvE/KJCNnm1RhToQLfn1vR28yEO1oka0ren0gk
-b+hI0zf5uaaMagYhiPAYscN1Ww7hDk2lRX2kkGkUTVVappIedaIGV29bEo9/hhkj
-4MRqPPb/f+r7mBFCkVHhtDW6MePo4kCo4zcTTSd7+c02C+N2+YBG8Vy+P/Vpg0QH
-7TvdcqLdznCGlaMfwjywaUFxsewmaiRM/lzM/Syi6ffOnZ3MIzvLbgwfy4YGiu4q
-3XgOux1KpdOsYt1gbIFuc1xjzzbAZSHEc3bd27+5IdOEd2S+A40BvQhSZ2i6dxgR
-C7W0oEf00v9PIDEMKlk5oaU0Pku9fVDL4yxZl3f1RMZBv374XlC1FtRyqNx/Lwef
-gBQkev2iZED+DOx8BE19
-=OjsK
+iQIcBAEBCAAGBQJVJUabAAoJELp701BxlEWfaL0P/RXWeDKkPNeF0BlQV4OyENVh
+IHIWX6did2fYAKiqkun+pUgz4ZwRo5pxE0+fQW4c7uhpIlVVvCB0UjhkrwvKar3L
+2weeTWREy/4WjQD//AlRek0iOEbsaN4hq/gZl8pzv4D9vZHdXtpoyfa3MBE+Ty4F
+YKNvyLAoVHBeKUnJoA2hrmjdvxOYJCjlwOWC9LWQc+r7x9mkUvd33EaaRzfU8J+4
+rITdnznQj4trdDP4YyLrwLSr6uHn5YlEq9Q1UGb6MWAECrEBHaaZTIxJScBQdnN9
+OlMhz99vqjjSi7IJmOaI3xyHOUMY1wnyQ0N/7vW24R08kGziBb5Z1y+3VGw1fjZb
+GQ3Yphz5kSxQiKyW/xga3OGQBfWg/OP9OQAUqdif+anl32yiJ08VimrGnXLT88d7
+02g+T292pVJt6gaHPbnMbZgIcMZLthgRVH2z+duBLlXvIy8+oZ0BFIod6YlC5jft
+Pg9cIvGQX+ggyDOY5Y/FJsxpBt9TP0WN5xINJtF5fm/P/PJ0P5DN+AyLTHpfcqZA
++sW/uXjUrsqw30faXPTcyCtLXfqHGEeRUmldhi8qTACrymeyv15JrDstSi2kCIh0
+zV4vRvYDmSqC+xeYUikbrApp250ImUcwkvS9tKxwa/DzxNnYFmSvWmf7uANGwYFa
+3gD1GVHPSlaAP3agSx3a
+=OeGR
 -----END PGP SIGNATURE-----
