@@ -1,6 +1,9 @@
 # ChangeLog for games-simulation/flightgear-data
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/flightgear-data/ChangeLog,v 1.13 2015/03/27 10:32:50 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/flightgear-data/ChangeLog,v 1.14 2015/04/08 15:17:54 ago Exp $
+
+  08 Apr 2015; Agostino Sarubbo <ago@gentoo.org> flightgear-data-3.4.0.ebuild:
+  Stable for amd64, wrt bug #544714
 
   27 Mar 2015; Agostino Sarubbo <ago@gentoo.org> flightgear-data-3.2.0.ebuild:
   Stable for x86, wrt bug #541288
